--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -20,14 +20,27 @@
 }
 
 .ctaButton {
-  padding: 10px 20px;
-  font-size: 18px;
-  color: #f2f4f7;
-  background-color: #e44848;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-top: 20px;
+  width: 220px;
+  display: inline-flex;
+  padding: 16px 60px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-style: none;
+  border-radius: 200px;
+  background: #e44848;
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: -0.08px;
+}
+
+.ctaButton:hover,
+.ctaButton:focus {
+  background: #d84343;
 }
 
 .features {
