--- a/src/components/AdvertsList/AdvertsList.module.css
+++ b/src/components/AdvertsList/AdvertsList.module.css
@@ -31,3 +31,24 @@
   letter-spacing: -0.08px;
   margin-top: 50px;
 }
+
+.loadMoreButton:hover,
+.loadMoreButton:focus {
+  border: 1px solid var(--Button, #e44848);
+}
+
+.loading {
+  display: inline-flex;
+  padding: 16px 32px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: var(--Main, #101828);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: -0.08px;
+  margin-top: 50px;
+}
