--- a/src/components/AdvertItem/AdvertItem.module.css
+++ b/src/components/AdvertItem/AdvertItem.module.css
@@ -59,7 +59,7 @@
 .title {
   margin: 0;
   color: #101828;
-  font-family: Inter;
+  font-family: inherit;
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
@@ -68,7 +68,7 @@
 
 .price {
   color: #101828;
-  font-family: Inter;
+  font-family: inherit;
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
@@ -89,7 +89,7 @@
   overflow: hidden;
   color: #475467;
   text-overflow: ellipsis;
-  font-family: Inter;
+  font-family: inherit;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -108,7 +108,7 @@
   background: #e44848;
   color: #fff;
 
-  font-family: Inter;
+  font-family: inherit;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
