--- a/src/components/EquipmentItem/EquipmentItem.module.css
+++ b/src/components/EquipmentItem/EquipmentItem.module.css
@@ -12,7 +12,7 @@
 .equipmentName {
   color: #101828;
   text-align: center;
-  font-family: Inter;
+  font-family: inherit;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
