--- a/src/components/Location/Location.module.css
+++ b/src/components/Location/Location.module.css
@@ -7,7 +7,7 @@
 
 .location {
   color: #101828;
-  font-family: Inter;
+  font-family: inherit;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
