--- a/src/components/AdvertDetails/AdvertDetails.module.css
+++ b/src/components/AdvertDetails/AdvertDetails.module.css
@@ -8,3 +8,109 @@
   border-radius: 20px;
   background: #fff;
 }
+
+.header {
+  display: flex;
+  width: 902px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.headerTop {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+  align-self: stretch;
+  color: #101828;
+  font-family: inherit;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.25em;
+}
+
+.closeButton {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.headerBottom {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.ratingAndLocation {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.price {
+  color: #101828;
+  font-family: inherit;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.25em;
+}
+
+.advertImages {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+}
+
+.imageWrapper {
+  flex-shrink: 0;
+  width: 290px;
+  height: 310px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 44px;
+  flex-shrink: 0;
+  align-self: stretch;
+}
+
+.description {
+  margin: 0;
+  max-width: 902px;
+  color: #475467;
+  font-family: inherit;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+}
