--- a/src/components/AdvertDetails/AdvertDetails.module.css
+++ b/src/components/AdvertDetails/AdvertDetails.module.css
@@ -114,3 +114,66 @@
   font-weight: 400;
   line-height: 1.5em;
 }
+
+.tabsHeader {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.tabButtons {
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.tab {
+  color: #101828;
+  font-family: inherit;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.2em;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.activeTab {
+  color: #101828;
+  font-family: inherit;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.2em;
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: relative;
+}
+
+.activeTab::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: -27px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #e44848;
+}
+
+.tabsHeaderBottom {
+  height: 1px;
+  background-color: rgba(16, 24, 40, 0.2);
+  width: 100%;
+}
+
+.detailsAndBookingForm {
+  display: flex;
+  align-items: flex-start;
+  gap: 24px;
+  align-self: stretch;
+}
