--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -1,4 +1,5 @@
 .bookingForm {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -27,6 +28,89 @@
 
 .inputField:focus {
   outline: none;
+}
+
+.calendarInputWrapper {
+  position: anbsolute;
+}
+
+.calendarInput {
+  position: relative;
+  width: 364px;
+  height: 20px;
+  padding: 18px;
+  border: none;
+  border-radius: 10px;
+  background: #f7f7f7;
+
+  color: #101828;
+  font-family: inherit;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25em;
+}
+
+.calendarInput::placeholder {
+  color: rgba(16, 24, 40, 0.6);
+}
+
+.calendarInput:focus {
+  outline: none;
+}
+
+.calendarIcon {
+  right: 18px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0;
+  z-index: 1;
+}
+
+.calendar {
+  display: inline-flex;
+  padding: 16px;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  border-radius: 12px;
+  border: 1px solid rgba(16, 24, 40, 0.2);
+  background: #fff;
+  font-family: Inter;
+}
+
+.calendarDay {
+  width: 41px;
+  height: 32px;
+  margin: 1px;
+
+  color: #475467;
+  text-align: center;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.calendarMonth {
+  color: #101828;
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.calendarWeekDay {
+  width: 41px;
+  height: 14px;
+  color: #475467;
+  text-align: center;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  margin: 20px 0;
 }
 
 .commentTextArea {
