using colors from variables

--- a/src/components/AdvertDetails/AdvertDetails.module.css
+++ b/src/components/AdvertDetails/AdvertDetails.module.css
@@ -36,7 +36,7 @@
   text-overflow: ellipsis;
   margin: 0;
   align-self: stretch;
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 24px;
   font-style: normal;
@@ -64,7 +64,7 @@
 }
 
 .price {
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 24px;
   font-style: normal;
@@ -107,7 +107,7 @@
 .description {
   margin: 0;
   max-width: 902px;
-  color: #475467;
+  color: var(--color-text);
   font-family: inherit;
   font-size: 16px;
   font-style: normal;
@@ -130,7 +130,7 @@
 }
 
 .tab {
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 20px;
   font-style: normal;
@@ -142,7 +142,7 @@
 }
 
 .activeTab {
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 20px;
   font-style: normal;
@@ -162,7 +162,7 @@
   left: 0;
   width: 100%;
   height: 5px;
-  background-color: #e44848;
+  background-color: var(--color-button);
 }
 
 .tabsHeaderBottom {
@@ -199,7 +199,7 @@
 }
 
 .bookingFormTitle {
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 20px;
   font-style: normal;
@@ -210,7 +210,7 @@
 
 .bookingFormText {
   align-self: stretch;
-  color: #475467;
+  color: var(--color-text);
   font-family: inherit;
   font-size: 16px;
   font-style: normal;
