--- a/src/components/Location/Location.module.css
+++ b/src/components/Location/Location.module.css
@@ -6,7 +6,7 @@
 }
 
 .location {
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 16px;
   font-style: normal;
