--- a/src/components/AdvertItem/AdvertItem.module.css
+++ b/src/components/AdvertItem/AdvertItem.module.css
@@ -58,7 +58,7 @@
 
 .title {
   margin: 0;
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 24px;
   font-style: normal;
@@ -67,7 +67,7 @@
 }
 
 .price {
-  color: #101828;
+  color: var(--color-main);
   font-family: inherit;
   font-size: 24px;
   font-style: normal;
@@ -87,7 +87,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
-  color: #475467;
+  color: var(--color-text);
   text-overflow: ellipsis;
   font-family: inherit;
   font-size: 16px;
@@ -105,7 +105,7 @@
   gap: 10px;
   border-style: none;
   border-radius: 200px;
-  background: #e44848;
+  background: var(--color-button);
   color: #fff;
 
   font-family: inherit;
@@ -118,5 +118,5 @@
 
 .showMoreButton:hover,
 .showMoreButton:focus {
-  background: #d84343;
+  background: var(--color-button-hover);
 }
