--- a/src/components/EquipmentItem/EquipmentItem.module.css
+++ b/src/components/EquipmentItem/EquipmentItem.module.css
@@ -4,13 +4,13 @@
   align-items: center;
   gap: 8px;
   border-radius: 100px;
-  background: var(--Gray-100, #f2f4f7);
+  background: var(--color-block-features);
   mix-blend-mode: multiply;
   max-height: 44px;
 }
 
 .equipmentName {
-  color: #101828;
+  color: var(--color-main);
   text-align: center;
   font-family: inherit;
   font-size: 16px;
