--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #475467;
+  background-color: var(--color-text);
   color: white;
   padding: 10px 20px;
 }
@@ -19,7 +19,7 @@
 
 .link {
   text-decoration: none;
-  color: #f2f4f7;
+  color: var(--color-block-features);
   transition: color 0.3s ease;
 }
 
@@ -28,5 +28,5 @@
 }
 
 .navItem .activeLink {
-  color: #ffc531;
+  color: var(--color-rating);
 }
