--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,5 +5,6 @@
   --color-inputs: #f7f7f7;
   --color-block-features: #f2f4f7;
   --color-rating: #ffc531;
+  --color-active-header-tab: #ffc531;
   --color-text: #475467;
 }
